# emlib

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  pyrightconfig.json  readthedocs.yml  requirements.txt  setup.py
docs/: bpfx.rst  calculus.rst  combinatorics.rst  conf.py  containers.rst  csvtools.rst  dialogs.rst  doctools.rst  filetools.rst  generatedocs.py  graphlib.rst  img.rst  index.rst  iterlib.rst  jsontools.rst  mathlib.rst  matplotting.rst  minizinctools.rst  misc.rst  net.rst  numberseries.rst  numpytools.rst  requirements.txt  result.rst  textlib.rst
emlib/: __init__.py  _dialogsqt.py  bpfx.py  calculus.py  classproperty.py  code.py  colordata.py  combinatorics.py  common.py  conftools.py  constraintlib.py  constraintools.py  containers.py  csvtools.py  dialogs.py  distribute.py  doctools.py  electronics.py  envir.py  filetools.py  gradient.py  graphlib.py  img.py  interpol.py  iterlib.py  iters.py  jsontools.py  lib.py  logutils.py  mathlib.py  matplotting.py  minizinctools.py  misc.py  mus.py  net.py  null.py  numberseries.py  numpytools.py  numtheory.py  parabolicinterpol.py  (+17 more)
emlib/acoustics/: crystal.py  helmholtz.py  soundlevel.py  soundspeed.py
emlib/comp/: resilienz.py  suona.py  timescale_accel.py
emlib/data/: openthesaurus-de.txt
emlib/ext/: audacity.py  puredata.py  reaper.py  sonicvisualizer.py
emlib/midi/: generalmidi.py  generate.py  midikeyb.py  notify.py  util.py
emlib/music/: #shownotes.py#  __init__.py  abjadtools.py  api.py  chordspace.py  combtones.py  dynamics.py  event.py  flageolet.py  interactive.py  lilytools.py  m21fix.py  m21tools.py  misc.py  packing.py  scordatura.py  scoring.py  scoring_play.py  shownotes.py  stream.py  taleacolor.py  timeline.py  timescale.py  timing.py  turntable.py
emlib/snd/: ampcomp.py  audiosample.py  csound.py  csoundengine.py  csoundplayer.py  dsp.py  features.py  freqestimate.py  ls.py  (+11 more)
(+23 files in other folders)
