[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "emlib"
version = "1.19.3"
description = "Miscellaneous utilities (text handling, maths, iterators, etc.)"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]
license-files = ["LICENSE.md"]
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"

dependencies = [
    "numpy",
    "appdirs",
    "tabulate",
    "watchdog",
    "matplotlib",
    "pillow<11",
    "decorator",
    "ttkthemes",
]

[tool.setuptools]
include-package-data = true
packages = ["emlib"]

[tool.setuptools.package-data]
csoundengine = ['emlib/py.types']


[project.urls]
"Homepage" = "https://github.com/gesellkammer/emlib"
